@@ -5,26 +5,37 @@
 package io.jenkins.plugins.interactiveinput.config;
 
 import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.Extension;
+import hudson.model.Descriptor;
 import hudson.model.Job;
+import io.jenkins.plugins.interactiveinput.notify.EmailChannel;
+import io.jenkins.plugins.interactiveinput.notify.NotificationChannel;
+import io.jenkins.plugins.interactiveinput.notify.TeamsChannel;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 import jenkins.model.OptionalJobProperty;
 import org.jenkinsci.Symbol;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
 
 /**
- * Per-pipeline notification preferences, shown in <em>Configure</em> alongside other plugins
- * (§future push notifications). Extends {@link OptionalJobProperty} so it appears as an opt-in
- * checkbox ("Interactive Input notifications") that reveals the channel preferences; the property is
- * attached only when enabled.
+ * Per-pipeline outbound notification channels, shown in <em>Configure</em> as an opt-in checkbox
+ * ("Interactive Input notifications") that reveals an add-channel list. Delivery is notify-only
+ * (email / Teams / Slack webhooks) — nothing in this property answers a question.
  *
- * <p>Scope note: this release <strong>persists</strong> the preferences only. Actual delivery
- * (email, Microsoft Teams, webhooks) is deferred to a future release — no notifier extension point
- * ships yet. Storing the intent now lets operators configure pipelines ahead of that work.
+ * <p>Pre-channel XML ({@code email}/{@code teams} booleans plus {@code recipients}/
+ * {@code webhookCredentialsId}) is migrated in {@link #readResolve()}.
  */
 public class InteractiveInputJobProperty extends OptionalJobProperty<Job<?, ?>> {
 
+    /**
+     * Legacy fields kept only so XStream can populate them on load; {@link #readResolve()} copies them
+     * into {@link #channels} and clears them so they are not re-migrated.
+     */
     private boolean email;
+
     private boolean teams;
 
     @CheckForNull
@@ -33,50 +44,50 @@ public class InteractiveInputJobProperty extends OptionalJobProperty<Job<?, ?>> 
     @CheckForNull
     private String webhookCredentialsId;
 
+    @NonNull
+    private List<NotificationChannel> channels = new ArrayList<>();
+
     @DataBoundConstructor
     public InteractiveInputJobProperty() {
         // Fields populated via @DataBoundSetter from config-details.jelly.
     }
 
-    public boolean isEmail() {
-        return email;
+    @NonNull
+    public List<NotificationChannel> getChannels() {
+        return channels == null ? Collections.emptyList() : Collections.unmodifiableList(channels);
     }
 
     @DataBoundSetter
-    public void setEmail(boolean email) {
-        this.email = email;
+    public void setChannels(@CheckForNull List<NotificationChannel> channels) {
+        this.channels = channels == null ? new ArrayList<>() : new ArrayList<>(channels);
     }
 
-    public boolean isTeams() {
-        return teams;
-    }
-
-    @DataBoundSetter
-    public void setTeams(boolean teams) {
-        this.teams = teams;
-    }
-
-    @CheckForNull
-    public String getRecipients() {
-        return recipients;
-    }
-
-    @DataBoundSetter
-    public void setRecipients(@CheckForNull String recipients) {
-        this.recipients = recipients == null || recipients.trim().isEmpty() ? null : recipients.trim();
-    }
-
-    @CheckForNull
-    public String getWebhookCredentialsId() {
-        return webhookCredentialsId;
-    }
-
-    @DataBoundSetter
-    public void setWebhookCredentialsId(@CheckForNull String webhookCredentialsId) {
-        this.webhookCredentialsId =
-                webhookCredentialsId == null || webhookCredentialsId.trim().isEmpty()
-                        ? null
-                        : webhookCredentialsId.trim();
+    /**
+     * Convert the pre-ExtensionPoint boolean form into {@link EmailChannel} / {@link TeamsChannel}
+     * once. After that {@link #channels} is the source of truth.
+     */
+    @NonNull
+    private Object readResolve() {
+        if (channels == null) {
+            channels = new ArrayList<>();
+        }
+        if (channels.isEmpty()) {
+            if (email || (recipients != null && !recipients.isBlank())) {
+                EmailChannel mail = new EmailChannel();
+                mail.setRecipients(recipients);
+                channels.add(mail);
+            }
+            if (teams || (webhookCredentialsId != null && !webhookCredentialsId.isBlank())) {
+                TeamsChannel t = new TeamsChannel();
+                t.setWebhookCredentialsId(webhookCredentialsId);
+                channels.add(t);
+            }
+        }
+        email = false;
+        teams = false;
+        recipients = null;
+        webhookCredentialsId = null;
+        return this;
     }
 
     @Extension
@@ -86,6 +97,12 @@ public class InteractiveInputJobProperty extends OptionalJobProperty<Job<?, ?>> 
         @Override
         public String getDisplayName() {
             return "Interactive Input notifications";
+        }
+
+        /** Channel types offered by the hetero-list (not a Stapler {@code do*} fill). */
+        @NonNull
+        public List<Descriptor<NotificationChannel>> getChannelDescriptors() {
+            return new ArrayList<>(NotificationChannel.all());
         }
     }
 }
